george-33d: work on flex reporter